Added correct answers tracker

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
       <section class="question-container">
         <h3 class="question-number">Question 1</h3>
+        <h3 class="quiz-score">Score: 0</h3>
         <h1 class="question-title"></h1>
         <div class="answers-container"></div>
       </section>
