--- a/index.html
+++ b/index.html
@@ -14,16 +14,32 @@
   </head>
   <body>
     <main>
-      <section class="question-container">
-        <h3 class="question-number">Question 1</h3>
-        <h3 class="quiz-score">Score: 0</h3>
-        <h1 class="question-title"></h1>
-        <div class="answers-container"></div>
-      </section>
-      <section class="question-feedback-container hide-question-feedback">
-        <h2 class="question-feedback">Answer is !</h2>
-        <button class="next-question">Next Question</button>
-      </section>
+      <div class="intro">
+        <h1 class="intro-title">Hello are you ready to take a quiz?</h1>
+        <div class="select-box" id="difficulty">
+          <div class="options-container">
+            <div class="option">Easy</div>
+            <div class="option">Medium</div>
+            <div class="option">Hard</div>
+          </div>
+          <div class="selected-btn"></div>
+        </div>
+
+        <button class="start-quiz">Let's start</button>
+      </div>
+      <div class="quiz">
+        <section class="question-container">
+          <h3 class="question-number">Question 1</h3>
+          <h3 class="quiz-score">Score: 0</h3>
+          <h3 class="quiz-difficulty">difficulty: easy</h3>
+          <h1 class="question-title"></h1>
+          <div class="answers-container"></div>
+        </section>
+        <section class="question-feedback-container hide-question-feedback">
+          <h2 class="question-feedback">Answer is !</h2>
+          <button class="next-question">Next Question</button>
+        </section>
+      </div>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
