Added selection of categories

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
           </div>
           <div class="selected-btn"></div>
         </div>
+        <div class="select-box" id="category">
+          <div class="options-container">
+            <div class="option">General knowledge</div>
+            <div class="option">Sports</div>
+            <div class="option">Video game</div>
+            <div class="option">History</div>
+            <div class="option">Music</div>
+          </div>
+          <div class="selected-btn"></div>
+        </div>
 
         <button class="start-quiz">Let's start</button>
       </div>
